# xSystem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  install.sh  main.cpp
app/: MonitorApp.cpp  MonitorApp.h
ipc/: BinderClientAdapter.cpp  BinderClientAdapter.h  BinderProtocol.h  BinderServerAdapter.cpp  BinderServerAdapter.h
lifecycle/: LifecycleMain.cpp
service/: CpuService.cpp  MemoryService.cpp  RamService.cpp
